--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* 공통 */
-body{font-family: 'Noto Sans KR', 'Roboto', 'Montserrat', sans-serif; cursor: ;}
+body{font-family: 'Noto Sans KR', 'Roboto', 'Montserrat', sans-serif;}
 @font-face {font-family: 'S-CoreDream-2ExtraLight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff'); font-weight: normal; font-style: normal;}
 /*body::after{position: fixed; top: 0; left: 0; width: 100%; height: 100%; content: ''; background-image: url(../img/noise.gif); opacity: 0.07; z-index: 10;}*/
 .h2{
@@ -81,7 +81,6 @@ body{font-family: 'Noto Sans KR', 'Roboto', 'Montserrat', sans-serif; cursor: ;}
 }
 .hover {
 	text-decoration: none;
-	cursor: none;
     z-index: 20000;
 }
 ::selection {
@@ -114,7 +113,8 @@ body::after{
 #work2{background:url(../img/gr_bg.png);}
 #work3{background:url(../img/gr_bg.png);}
 #work4{background:url(../img/gr_bg.png);}
-#work5{background: url(../img/bl_bg.png);}
+#work5{background:url(../img/gr_bg.png);}
+#work6{background: url(../img/bl_bg.png);}
 #contact{background:url(../img/gr_bg.png);}
 #footer{background: url(../img/bl_bg.png);}
 
@@ -168,7 +168,7 @@ body::after{
 
 /* header */
 .header{position: fixed; left: 13px; top: 0; display: flex; width: 100%; height: 90px; justify-content: center; font-family: 'Roboto', sans-serif; font-weight: bold; z-index: 20000;}
-.header .logo{width: 70px; height: 70px; background: #ffd600; border-radius: 50%; margin-top: 10px; text-indent: -9999px;}
+.header .logo img{width: 150px; margin-top: 10px;}
 .header .gnb_left{}
 .header .gnb_left .menu1{font-size: 16px; margin-right: 60px;}
 .header .gnb_left .menu1 li{display: inline-block; margin: 30px 0 30px 50px;}
@@ -219,7 +219,7 @@ body::after{
 .about .about_right .right_col1{width: 95%;}
 .about .about_right .right_col1 p{color: #fff; margin-top: 70px; font-size: 14px; letter-spacing: 0.7px; font-family: 'S-CoreDream-2ExtraLight'; line-height: 1.6;}
 .about .about_right .right_col1 span{}
-.about .about_right .right_col1 a{color: #fff; font-family: 'Montserrat', sans-serif; font-weight: bold; font-size: 16px; margin-top: 30px; display: inline-block; letter-spacing: 0.5px;}
+.about .about_right .right_col1 a{color: #fff; font-family: 'Montserrat', sans-serif; font-weight: bold; font-size: 16px; margin-top: 30px; display: block; letter-spacing: 0.5px;}
 .about .about_right .right_col1 a:hover{color: #ffd600;}
 .about .about_right .right_col1 a i{color: #fff; font-size: 18px; margin-left: 10px; vertical-align:-1px; font-weight: bold;}
 .about .about_right .right_col1 a:hover i{color: #ffd600;}
@@ -517,7 +517,7 @@ a.thar-one:before {
 #work3.show .work3 .work3_right img{}
 
 /* work4 */
-.work4{overflow: hidden; color: #fff; text-transform: uppercase; padding: 7% 0 15% 0;}
+.work4{overflow: hidden; color: #fff; text-transform: uppercase; padding: 7% 0 7% 0;}
 .work4 .work4_top{margin-top: -25px; font-family: 'Montserrat', sans-serif; font-weight: bold; margin-bottom: 5%;}
 .work4 .work4_top h2{margin-top: -35px; display: inline; font-size: 80px;}
 .work4 .work4_top h2 em{display: inline; font-size: 80px;}
@@ -533,7 +533,7 @@ a.thar-one:before {
 .work4 .work4_left li{float: left; width: 40%; line-height: 2; font-family: 'Roboto','S-CoreDream-2ExtraLight'; letter-spacing: 1px; font-size: 12px;}
 .work4 .work4_left p{font-family: 'S-CoreDream-2ExtraLight'; letter-spacing: 0.65px; line-height: 1.8;}
 .work4 .work4_right{float: right; width: 70%;}
-.work4 .work4_right img{width: 100%; border-radius: 7px;}
+.work4 .work4_right img{width: 100%;}
 
 /* work4 - 애니메이션 */
 .work4{}
@@ -570,21 +570,70 @@ a.thar-one:before {
 #work4.show .work4 .work4_right img{}
 
 /* work5 */
-.work5{padding:10% 0;}
-.work5 .work5_tit{display: flex; align-items: center; justify-content: center;}
-.work5 .work5_tit h2{}
-.work5 .work5_tit h2 em{}
-.work5 .work5_col1{padding: 5% 0 0 0;}
-.work5 .work5_col1 .box{display: flex; flex-wrap: wrap; align-items: center; justify-content: center;}
-.work5 .work5_col1 .box > div {width: 280px; height: 280px; background: #fff; margin: 20px;}
-.work5 .work5_col1 .box .css1{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);}
-.work5 .work5_col1 .box .css2{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);}
-.work5 .work5_col1 .box .css3{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(0deg, #FAD961 0%, #F76B1C 50%, #d10b0b 100%);}
-.work5 .work5_col1 .box .css4{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background: #240229;}
-.work5 .work5_col1 .box .css1,.css2,.css3,.css4{position: relative;}
+.work5{overflow: hidden; color: #fff; text-transform: uppercase; padding: 7% 0 15% 0;}
+.work5 .work5_top{margin-top: -25px; font-family: 'Montserrat', sans-serif; font-weight: bold; margin-bottom: 5%;}
+.work5 .work5_top h2{margin-top: -35px; display: inline; font-size: 80px;}
+.work5 .work5_top h2 em{display: inline; font-size: 80px;}
+.work5 .work5_top p{ color: #fff; text-align: left; margin-top: -35px; display: inline; font-size: 80px;}
+.work5 .work5_top p em{color: #fff; display: inline;  font-size: 80px; font-style: normal; -webkit-text-fill-color: transparent; -webkit-text-stroke: 1px #fff; line-height: 0.5;}
+.work5 .work5_left{float: left; width: 25%; margin-right: 5%;}
+.work5 .work5_left .site_tit1{font-family: 'Roboto', sans-serif; font-size: 15px; font-weight: bold; letter-spacing: 1.5px; margin: 40px 0 20px 0; position: relative;}
+.work5 .work5_left .site_tit1::before{content: ''; width: 20px; height: 2px; position: absolute; top: -20px; left: 0; background: #fff;}
+.work5 .work5_left h4.site_tit2{color: #fff; font-weight: bold; margin: 40px 0 20px 0; font-size: 20px; font-family: 'S-CoreDream-2ExtraLight'; display: block;}
+.work5 .work5_left ol{overflow: hidden; width: 100%;}
+.work5 .work5_left li{float: left; width: 40%; line-height: 2; font-family: 'Roboto','S-CoreDream-2ExtraLight'; letter-spacing: 1px; font-size: 12px;}
+.work5 .work5_left p{font-family: 'S-CoreDream-2ExtraLight'; letter-spacing: 0.65px; line-height: 1.8;}
+.work5 .work5_right{float: left; width: 70%;}
+.work5 .work5_right img{width: 100%; border-radius: 7px;}
 
+/* work5 - 애니메이션 */
+.work5{}
+.work5 .work5_top{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.0s ease-in-out;}
+.work5 .work5_top h2{}
+.work5 .work5_top h2 em{}
+.work5 .work5_top p{}
+.work5 .work5_top p em{}
+.work5 .work5_left{}
+.work5 .work5_left .site_tit1{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.2s ease-in-out;}
+.work5 .work5_left .site_tit1::before{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.1s ease-in-out;}
+.work5 .work5_left h4.site_tit2{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.6s ease-in-out;}
+.work5 .work5_left ol{}
+.work5 .work5_left li{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.4s ease-in-out;}
+.work5 .work5_left p{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.8s ease-in-out;}
+.work5 .work5_left a{opacity: 0; transform: translateY(40px); transition: all 0.3s 1.0s ease-in-out;}
+.work5 .work5_right{opacity: 0; transform: translateY(40px); transition: all 0.3s 1.1s ease-in-out;}
+.work5 .work5_right img{}
+#work5.show .work5{}
+#work5.show .work5 .work5_top{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_top h2{}
+#work5.show .work5 .work5_top h2 em{}
+#work5.show .work5 .work5_top p{}
+#work5.show .work5 .work5_top p em{}
+#work5.show .work5 .work5_left{}
+#work5.show .work5 .work5_left .site_tit1{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_left .site_tit1::before{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_left h4.site_tit2{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_left ol{}
+#work5.show .work5 .work5_left li{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_left p{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_left a{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_right{opacity: 1; transform: translateY(0);}
+#work5.show .work5 .work5_right img{}
 
-.work5 .work5_col1 .box > div .textbox{
+/* work6 */
+.work6{padding:10% 0;}
+.work6 .work6_tit{display: flex; align-items: center; justify-content: center;}
+.work6 .work6_tit h2{}
+.work6 .work6_tit h2 em{}
+.work6 .work6_col1{padding: 5% 0 0 0;}
+.work6 .work6_col1 .box{display: flex; flex-wrap: wrap; align-items: center; justify-content: center;}
+.work6 .work6_col1 .box > div {width: 280px; height: 280px; background: #fff; margin: 20px;}
+.work6 .work6_col1 .box .css1{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);}
+.work6 .work6_col1 .box .css2{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);}
+.work6 .work6_col1 .box .css3{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background-image: linear-gradient(0deg, #FAD961 0%, #F76B1C 50%, #d10b0b 100%);}
+.work6 .work6_col1 .box .css4{display: block; width: 280px; height: 280px; display: flex; justify-content: center; align-items: center;  background: #240229;}
+.work6 .work6_col1 .box .css1,.css2,.css3,.css4{position: relative;}
+.work6 .work6_col1 .box > div .textbox{
     position: absolute;
     left: 0;
     bottom: 0;
@@ -599,30 +648,27 @@ a.thar-one:before {
     opacity: 0;
     transition: opacity 0.4s ease;
 }
+.work6 .work6_col1 .box > div:hover .textbox {opacity: 1;}
+.work6 .work6_col1 .box .textbox h3{color: #fff; font-size: 20px; text-align: center; font-weight: 900; font-family: 'Roboto', sans-serif; display: block;}
+.work6 .work6_col1 .box .textbox a{text-align: center; border: 1px solid #fff; color: #fff;padding: 10px 60px; display: block; margin-top: 20px; border-radius: 20px; font-family: 'S-CoreDream-2ExtraLight';}
 
+/* work6 - 애니메이션*/
+.work6{}
+.work6 .work6_tit{}
+.work6 .work6_tit h2{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.0s ease-in-out;}
+.work6 .work6_tit h2 em{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.2s ease-in-out;}
+.work6 .work6_col1{}
+.work6 .work6_col1 .box{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.4s ease-in-out;}
+.work6 .work6_col1 .box > div{}
+#work6.show .work6{}
+#work6.show .work6 .work6_tit{}
+#work6.show .work6 .work6_tit h2{opacity: 1; transform: translateY(0);}
+#work6.show .work6 .work6_tit h2 em{opacity: 1; transform: translateY(0);}
+#work6.show .work6 .work6_col1{}
+#work6.show .work6 .work6_col1 .box{opacity: 1; transform: translateY(0);}
+#work6.show .work6 .work6_col1 .box > div{}
 
-
-.work5 .work5_col1 .box > div:hover .textbox {opacity: 1;}
-.work5 .work5_col1 .box .textbox h3{color: #fff; font-size: 20px; text-align: center; font-weight: 900; font-family: 'Roboto', sans-serif; display: block;}
-.work5 .work5_col1 .box .textbox a{text-align: center; border: 1px solid #fff; color: #fff;padding: 10px 60px; display: block; margin-top: 20px; border-radius: 20px; font-family: 'S-CoreDream-2ExtraLight';}
-
-/* work5 - 애니메이션*/
-.work5{}
-.work5 .work5_tit{}
-.work5 .work5_tit h2{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.0s ease-in-out;}
-.work5 .work5_tit h2 em{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.2s ease-in-out;}
-.work5 .work5_col1{}
-.work5 .work5_col1 .box{opacity: 0; transform: translateY(40px); transition: all 0.3s 0.4s ease-in-out;}
-.work5 .work5_col1 .box > div{}
-#work5.show .work5{}
-#work5.show .work5 .work5_tit{}
-#work5.show .work5 .work5_tit h2{opacity: 1; transform: translateY(0);}
-#work5.show .work5 .work5_tit h2 em{opacity: 1; transform: translateY(0);}
-#work5.show .work5 .work5_col1{}
-#work5.show .work5 .work5_col1 .box{opacity: 1; transform: translateY(0);}
-#work5.show .work5 .work5_col1 .box > div{}
-
-/* work5 - wave */
+/* work6 - wave */
 .css_wave{}
 .css_wave .circle{
     width: 7px; height: 7px; 
@@ -650,7 +696,7 @@ a.thar-one:before {
 .css_wave .row:nth-child(9) .circle{animation-delay: 900ms;}
 .css_wave .row:nth-child(10) .circle{animation-delay: 1000ms;}  
 
-/* work5 - tail */
+/* work6 - tail */
 .css_tail{}
 .css_tail .circle{position: absolute; animation: movex 1s ease-in-out alternate infinite;}
 .css_tail .circle > div{border-radius: 50%; background: #fff; animation: movey 1s linear infinite;}
@@ -679,7 +725,7 @@ a.thar-one:before {
     100%{transform: translate(0,0);}
 }
 
-/* work5 - loader */
+/* work6 - loader */
 .css_loader{
     display: flex;
     align-items: center;
@@ -719,7 +765,7 @@ a.thar-one:before {
     100%{transform: rotate(90deg); border-radius: 0%;}
 }
 
-/* work5 - glow */
+/* work6 - glow */
 .css_glow{
     display: flex;
     align-items: center;
@@ -760,7 +806,7 @@ a.thar-one:before {
     border-radius: 50%;
 }
 
-/* work5 - modal 팝업 */
+/* work6 - modal 팝업 */
 .modal {
 	transform: scale(0);
 	position: fixed; left: 0; top: 0;
